# osc-variant

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  build.rs  osc-variant.wxs  release-please-config.json
.github/workflows/: build.yml  ci.yml  release.yml  tests.yml
docs/: checks.md  completions.md
examples/: dnpm-master.yml  dnpm-uka.yml  dnpm-ukm.yml  dnpm-ukr.yml  dnpm-ukw.yml  dnpm-umg.yml  dnpm-umr.yml
libs/bundles/: Cargo.toml
libs/bundles/src/: bundles.rs  lib.rs
libs/deob/: Cargo.toml  build.rs
libs/deob/src/: deob.c  deob.h  lib.rs
libs/model/: Cargo.toml
libs/model/src/: lib.rs  profile.rs
libs/model/src/osc/: data_catalogue.rs  form.rs  mod.rs  onkostar_editor.rs  other.rs  property_catalogue.rs  requirements.rs
libs/model/tests/: test.osc
man/: osc-variant.1.md
src/: bundles.rs  cli.rs  commands.rs  console.rs  file_io.rs  main.rs  notices.rs  profile.rs  unzip_osb.rs
src/checks/: mod.rs  osb.rs  osc.rs
src/model/: data_catalogue.rs  data_form.rs  form.rs  mod.rs  onkostar_editor.rs  other.rs  property_catalogue.rs  requirements.rs  unterformular.rs
tests/: test.osc
