[package]
name = "osc-variant"
version = "0.6.0"
edition = "2021"
authors = ["Paul-Christian Volkmer <volkmer_p@ukw.de>"]
description = "Anwendung zum Anpassen einer OSC-Datei an einen Standort"
license = "MIT"
readme = "README.md"

build = "build.rs"

[workspace]
members = ["libs/deob"]

[dependencies]
clap = { version = "4.4", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["escape-html", "serialize"], default-features = false }
console = "0.15"
sha256 = "1.4"
dialoguer = "0.11"
indicatif = "0.17"

deob = { path = "./libs/deob", optional = true }
zip = { version = "0.6", optional = true }

[features]
# Requires env var OSB_KEY to be present at build time
unzip-osb = ["dep:deob", "dep:zip"]

[build-dependencies]
clap = { version = "4.4", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
clap_complete = "4.4"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"

[package.metadata.deb]
copyright = "Copyright (c) 2023 Comprehensive Cancer Center Mainfranken"
extended-description = "Anwendung zum Anpassen einer OSC-Datei an einen Standort."
assets = [
    ["target/release/osc-variant", "usr/bin/", "755"],
    ["completion/osc-variant.bash", "etc/bash_completion.d/", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/osc-variant", dest = "/usr/bin/", mode = "755" },
    { source = "completion/osc-variant.bash", dest = "/etc/bash_completion.d/", mode = "644" }
]
