[package]
name = "osc-variant"
version = "0.9.0"
edition = "2021"
authors = ["Paul-Christian Volkmer"]
description = "Anwendung zum Anpassen einer OSC-Datei an einen Standort"
license = "GPL-2"
readme = "README.md"

build = "build.rs"

[workspace]
members = ["libs/deob"]

[dependencies]
clap = { version = "4.5", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["escape-html", "serialize"], default-features = false }
console = "0.15"
indicatif = "0.17"

deob = { path = "libs/deob", version = "*", optional = true }
zip = { version = "2.2", optional = true }
bytes = "1.10"
sha2 = { version = "0.10", default-features = false }
base16ct = { version = "0.2", features = ["alloc"] }

[features]
# Requires env var OSB_KEY to be present at build time
unzip-osb = ["dep:deob", "dep:zip"]

[build-dependencies]
clap = { version = "4.5", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
clap_complete = "4.5"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Packaging

[package.metadata.deb]
copyright = "Copyright (C) 2023-2025 the original author or authors"
extended-description = "Anwendung zum Anpassen einer OSC-Datei an einen Standort."
assets = [
    ["target/release/osc-variant", "usr/bin/", "755"],
    ["completion/osc-variant.bash", "etc/bash_completion.d/", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/osc-variant", dest = "/usr/bin/", mode = "755" },
    { source = "completion/osc-variant.bash", dest = "/etc/bash_completion.d/", mode = "644" }
]
