[package]
name = "osc-variant"
version = "0.13.2"
edition = "2024"
authors = ["Paul-Christian Volkmer"]
description = "Anwendung zum Anpassen einer OSC-Datei an einen Standort"
license = "GPL-2"
readme = "README.md"

[workspace]
resolver = "3"
members = ["libs/deob", "libs/model", "libs/bundles"]
default-members = [".", "libs/model", "libs/bundles"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.40", features = ["escape-html", "serialize"], default-features = false }
semver = "1.0"
regex = "1.12"
sha2 = { version = "0.11", default-features = false }
dirs = "6.0"
base16ct = { version = "1.0", features = ["alloc"] }
model = { path = "libs/model", version = "0.13.0" }
bundles = { path = "libs/bundles", version = "0.13.0" }
git2 = { version = "0.21", features = ["https"] }

[dependencies]
clap = { version = "4.6", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
clap_complete = "4.6"
bytes = "1.11"
csv = "1.4"
console = "0.16"
indicatif = "0.18"
encoding_rs = "0.8"
quick-xml.workspace = true
serde.workspace = true
sha2.workspace = true
base16ct.workspace = true
model.workspace = true
bundles.workspace = true
# Optional dependencies
deob = { path = "libs/deob", version = "0.13.2", optional = true }
zip = { version = "8.6", optional = true }

[features]
# Requires env var OSB_KEY to be present at build time
unzip-osb = ["dep:deob", "dep:zip"]
bundle-edit = []

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Packaging

[package.metadata.deb]
copyright = "Copyright (C) 2023-2026 the original author or authors"
extended-description = "Anwendung zum Anpassen einer OSC-Datei an einen Standort."
assets = [
    ["target/release/osc-variant", "usr/bin/", "755"],
    ["completion/osc-variant.bash", "etc/bash_completion.d/", "644"],
    ["man/osc-variant.1", "/usr/share/man/man1/osc-variant.1", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/osc-variant", dest = "/usr/bin/", mode = "755" },
    { source = "completion/osc-variant.bash", dest = "/etc/bash_completion.d/", mode = "644" },
    { source = "man/osc-variant.1", dest = "/usr/share/man/man1/osc-variant.1", mode = "644", doc = true }
]
